--- a/packages/ui/package.json
+++ b/packages/ui/package.json
@@ -3,24 +3,33 @@
   "version": "0.0.0",
   "private": true,
   "exports": {
-    "./button": "./src/button.tsx",
-    "./card": "./src/card.tsx",
-    "./code": "./src/code.tsx"
+    ".": "./src/index.ts",
+    "./styles.css": "./dist/index.css"
   },
   "scripts": {
+    "build": "tsup",
+    "dev": "tsup --watch",
     "lint": "eslint . --max-warnings 0",
     "generate:component": "turbo gen react-component"
   },
   "devDependencies": {
     "@repo/eslint-config": "*",
+    "@repo/tailwind-config": "*",
     "@repo/typescript-config": "*",
     "@turbo/gen": "^1.12.4",
-    "@types/node": "^20.11.24",
     "@types/eslint": "^8.56.5",
+    "@types/node": "^20.11.24",
     "@types/react": "^18.2.61",
     "@types/react-dom": "^18.2.19",
+    "autoprefixer": "^10.4.19",
     "eslint": "^8.57.0",
+    "postcss": "^8.4.38",
     "react": "^18.2.0",
+    "tailwindcss": "^3.4.3",
+    "tsup": "^8.0.2",
     "typescript": "^5.3.3"
-  }
+  },
+  "sideEffects": [
+    "**/*.css"
+  ]
 }
