--- a/packages/ui/package.json
+++ b/packages/ui/package.json
@@ -34,6 +34,7 @@
   ],
   "dependencies": {
     "react-icons": "^5.1.0",
-    "tailwind-merge": "^2.2.2"
+    "tailwind-merge": "^2.2.2",
+    "swiper": "^11.1.1"
   }
 }
